fix typist center width shift issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,11 @@ html {
   border: 1px solid #d0fc7e;
 }
 
+.Typist .Cursor {
+  display: inline-block;
+  width: 0;
+}
+
 .crt {
   font-family: 'Courier New', courier, monospace;
   font-size: 1rem;
